ScriptGeneratedContent out and err should now be streamed to err instead of showing them in the end as separate "sections"
git-svn-id: https://svn.code.sf.net/p/iwant/code/trunk@177 b1b70e83-b727-4846-b4cf-edd8a5b4313f